--- a/practice/CV_Template/styles.css
+++ b/practice/CV_Template/styles.css
@@ -23,7 +23,7 @@ body{
 .work{
     display: block; 
     width: 98%; 
-    height: 500px; 
+    height: 650px; 
     background-color: white; 
     margin: 15px;
     margin-left: -2px;
@@ -33,7 +33,7 @@ body{
 .edu{
     display: block; 
     width: 98%; 
-    height: 500px; 
+    height: 600px; 
     background-color: white;  
     margin: 15px;
     margin-left: -2px;
@@ -121,4 +121,55 @@ body{
 }
 .progress-container{
     margin-bottom: 50px; 
+}
+.work{
+    padding: 10px; 
+}
+.work h2{
+    color: rgb(95, 95, 95); 
+}
+.edu{
+    padding: 10px; 
+}
+.edu h2{
+    color: rgb(95, 95, 95);
+}
+.work-block{
+    color: rgb(95, 95, 95);  
+}
+.date{
+    font-size: 1.1em; 
+    display: flex; 
+    color: rgb(69, 172, 137);
+    align-items: center; 
+    margin-top: -15px; 
+}
+.work-info{
+    margin-left: 20px; 
+    margin-top: 40px; 
+}
+.current{
+    display: block; 
+    background-color: rgb(19, 145, 107);
+    border-radius: 5px; 
+    padding: 5px; 
+    color: white; 
+    margin-left: 5px; 
+}
+.description{
+    color: black; 
+}
+.footer{
+    display: inline-flex; 
+    flex-direction: column; 
+    width: 100%; 
+    height: 130px; 
+    background-color: rgb(120, 215, 228);
+    justify-content: center; 
+    align-items: center;  
+    color: white; 
+    padding: 10px;
+}
+.social-links{
+    color:white;
 }
